--- a/processos.html
+++ b/processos.html
@@ -10,8 +10,8 @@
   integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
   crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="assets/IconBeePro.png">
-<link rel="stylesheet" href="/style/processos.css" />
-<link rel="stylesheet" href="/style/style.css" />
+<link rel="stylesheet" href="style/processos.css" />
+<link rel="stylesheet" href="style/style.css" />
 
   <title>Simulações</title>
 </head>
