--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/simulador.css" />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style/simulador.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Simulações</title>
     <link rel="shortcut icon" href="assets/IconBeePro.png">
     <link rel="stylesheet" href="TemplateData/style.css">
