--- a/sobre.html
+++ b/sobre.html
@@ -11,8 +11,8 @@
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="assets/IconBeePro.png">
-  <link rel="stylesheet" href="/style/home.css" />
-  <link rel="stylesheet" href="/style/style.css" />
+  <link rel="stylesheet" href="style/home.css" />
+  <link rel="stylesheet" href="style/style.css" />
   <title>Simulações</title>
 </head>
 
@@ -67,7 +67,6 @@
       <span class="visually-hidden teste2">Next</span>
     </button>
   </div>
-  <button class="btn btn-secondary irSimulador" type="submit">Vamos lá!</button>
 
   <footer></footer>
   <script>
