--- a/sobre.html
+++ b/sobre.html
@@ -49,10 +49,10 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/Grupo 1.png" class="teste2" alt="..." />
+        <img src="Grupo 1.png" class="teste2" alt="..." />
       </div>
       <div class="carousel-item">
-        <img src="/Grupo 2.png" class="teste2" alt="..." />
+        <img src="Grupo 2.png" class="teste2" alt="..." />
       </div>
       <!-- <div class="carousel-item">
         <img src="/Grupo 3.png" class="d-block w-100" alt="..." />
