--- a/index.html
+++ b/index.html
@@ -1,70 +1,74 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Projeto_Ciclo_de_Vida</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Pagina Inicial | BeePro</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style/simulador.css" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Simulações</title>
-    <link rel="shortcut icon" href="assets/IconBeePro.png">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <title>BeePro | Home</title>
+    <link rel="shortcut icon" href="assets/IconBeePro.png" />
+    <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
-              <a class="navbar-brand" href="/"><img src="assets/BeeProLogo.png" class="logoHead" alt="..." /></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                  aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="/">Pagina Inicial</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="sobre.html">Sobre o BeeProo</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" href="processos.html">Processos de Software</a>
-                      </li>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><img src="assets/BeeProLogo.svg" class="logoHead" alt="..." /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Pagina Inicial</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre.html">Sobre o BeeProo</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="processos.html">Processos de Software</a>
+                    </li>
 
-                  </ul>
-                  <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                    <button class="btn btn-secondary" type="submit">Pesquisar</button>
-                  </form>
-              </div>
-          </div>
-      </nav>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                  <button class="btn btn-secondary" type="submit">Pesquisar</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    </header>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width="960" height="600"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <!-- <div id="unity-mobile-warning">
+      <div id="unity-mobile-warning">
         WebGL builds are not supported on mobile devices.
       </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Projeto_Ciclo_de_Vida</div>
-      </div> -->
+        <div id="unity-build-title">BeeProv</div>
+      </div>
     </div>
-    <script src="index.js">
-    
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
