arrumando modal responsivo

--- a/processos.html
+++ b/processos.html
@@ -9,17 +9,18 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
   crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/style/processos.css" />
-<link rel="stylesheet" href="/style/style.css" />
+  <link rel="shortcut icon" href="assets/IconBeePro.png">
+<link rel="stylesheet" href="style/processos.css" />
+<link rel="stylesheet" href="style/style.css" />
 
-  <title>Simulações</title>
+  <title>BeePro | Processos</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html"><img src="/BeeProLogoP.svg" class="logoHead" alt="..." /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/BeeProLogo.png" class="logoHead" alt="..." /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html">Pagina Inicial</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="simulador.html">Simulador de Processos</a>
+              <a class="nav-link" href="sobre.html">Sobre o BeeProo</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="processos.html">Processos de Software</a>
+              <a class="nav-link" href="/">Processos de Software</a>
             </li>
 
           </ul>
@@ -51,7 +52,7 @@
           <button class="accordion-button" type="button" data-bs-toggle="collapse"
             data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
             aria-controls="panelsStayOpen-collapseOne">
-            Accordion Item #1
+            Modelo Cascata
           </button>
         </h2>
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
@@ -70,7 +71,7 @@
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
             aria-controls="panelsStayOpen-collapseTwo">
-            Accordion Item #2
+            Scrum
           </button>
         </h2>
         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
@@ -84,7 +85,7 @@
           </div>
         </div>
       </div>
-      <div class="accordion-item">
+      <!-- <div class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
@@ -101,7 +102,7 @@
             CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
             <code>.accordion-body</code>, though the transition does limit overflow.
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
