--- a/sobre.html
+++ b/sobre.html
@@ -10,16 +10,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/style/home.css" />
-  <link rel="stylesheet" href="/style/style.css" />
-  <title>Simulações</title>
+    <link rel="shortcut icon" href="assets/IconBeePro.png">
+  <link rel="stylesheet" href="style/home.css" />
+  <link rel="stylesheet" href="style/style.css" />
+  <title>BeePro | Sobre</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html"><img src="/BeeProLogoP.svg" class="logoHead" alt="..." /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/BeeProLogo.png" class="logoHead" alt="..." /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Pagina Inicial</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Simulador de Processos</a>
+              <a class="nav-link" href="/">Sobre o BeeProo</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="processos.html">Processos de Software</a>
@@ -48,10 +49,10 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/Grupo 1.png" class="teste2" alt="..." />
+        <img src="Grupo 1.png" class="teste2" alt="..." />
       </div>
       <div class="carousel-item">
-        <img src="/Grupo 2.png" class="teste2" alt="..." />
+        <img src="Grupo 2.png" class="teste2" alt="..." />
       </div>
       <!-- <div class="carousel-item">
         <img src="/Grupo 3.png" class="d-block w-100" alt="..." />
@@ -66,7 +67,6 @@
       <span class="visually-hidden teste2">Next</span>
     </button>
   </div>
-  <button class="btn btn-secondary irSimulador" type="submit">Vamos lá!</button>
 
   <footer></footer>
   <script>
