arrumando modal responsivo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style/simulador.css" />
     <link rel="stylesheet" href="style/style.css" />
     <title>BeePro | Home</title>
-    <link rel="shortcut icon" href="assets/IconBeePro.png" />
+    <link rel="shortcut icon" href="assets/IconBeePro.svg" />
     <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
   <body>
@@ -53,7 +53,7 @@
     </nav>
     </header>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width="960" height="600"></canvas>
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
